Add trailing slash to intermediate path.

--- a/src/Common.props
+++ b/src/Common.props
@@ -24,7 +24,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <OutDir>$(xrBinDir)</OutDir>
-    <IntDir>$(xrIntDir)$(ProjectName)</IntDir>
+    <IntDir>$(xrIntDir)$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
